[gd_scene load_steps=8 format=3 uid="uid://cc4bqrpdv8f6n"]

[ext_resource type="PackedScene" uid="uid://cto0tiylqerf7" path="res://scenes/common/buttons/rectangular_button/rectangular_button.tscn" id="1_jeths"]
[ext_resource type="Material" uid="uid://clbdjo2h18v3a" path="res://shaders/invert_color/invert_color.material" id="2_4v5bx"]
[ext_resource type="Script" path="res://scenes/battlefields/common/base_battlefield/gui/spawn_buttons/spawn_button.gd" id="2_icp81"]

[sub_resource type="Animation" id="Animation_ty6py"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Border:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_yukig"]
resource_name = "empty"
length = 1.00003
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_c6xly"]
resource_name = "ready"
length = 1.00003
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Border:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxout"]
_data = {
"RESET": SubResource("Animation_ty6py"),
"empty": SubResource("Animation_yukig"),
"ready": SubResource("Animation_c6xly")
}

[node name="SpawnButton" instance=ExtResource("1_jeths")]
material = ExtResource("2_4v5bx")
focus_mode = 0
script = ExtResource("2_icp81")

[node name="Border" parent="." index="2"]
frame = 4

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_kxout")
}

[node name="SpawnTimer" type="Timer" parent="." index="4"]
wait_time = 0.001
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="." index="5"]
visible = false
layout_mode = 0
offset_left = 28.0
offset_top = 98.0
offset_right = 295.0
offset_bottom = 149.0
show_percentage = false

[node name="MoneyLabel" type="Label" parent="." index="6"]
layout_mode = 0
offset_left = 19.0
offset_top = 172.0
offset_right = 306.0
offset_bottom = 293.0
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 74
text = "50â‚µ"
horizontal_alignment = 2
